# ai-agent

./: README.md  deepseek_html_20260517_40838e.html
API 生成 Agent/: pyproject.toml
API 生成 Agent/src/vscc/: __init__.py  config.py  main.py
API 生成 Agent/src/vscc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
API 生成 Agent/src/vscc/agents/: __init__.py  base.py
API 生成 Agent/src/vscc/agents/openapi/: agent.py  generator.py
API 生成 Agent/src/vscc/agents/requirements/: agent.py  parsers.py
API 生成 Agent/src/vscc/agents/schema/: agent.py  ddl.py  dto.py
API 生成 Agent/src/vscc/agents/testgen/: agent.py  generator.py  runner.py
API 生成 Agent/src/vscc/api/: app.py  routes.py  schemas.py
API 生成 Agent/src/vscc/cli/: commands.py
API 生成 Agent/src/vscc/orchestrator/: loop.py  promises.py  usage.py
API 生成 Agent/src/vscc/shared/: io.py  spec.py  state.py
API 生成 Agent/tests/: test_agents.py  test_ddl.py  test_openapi_generator.py  test_parsers.py
API 生成 Agent/tests/fixtures/: sample-prd.md
